--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <div class="header">
     <!--HEADER-->
-    <img class="logo" src="https://www.freelogodesign.org/file/app/client/thumb/2753b891-b295-49cb-92c4-5d0ab28c732b_200x200.png?1612558587430"  alt="Logo of Company">
+    <!--<img class="logo" src="https://www.freelogodesign.org/file/app/client/thumb/2753b891-b295-49cb-92c4-5d0ab28c732b_200x200.png?1612558587430"  alt="Logo of Company">-->
     <h1> Roshiv Tech Inc.</h1>
     </div> 
     <!---Navigation Start Here-->
